Добавил main и футер

--- a/index.html
+++ b/index.html
@@ -25,59 +25,67 @@
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
     </header>
-    <div>
-       <section>
-        <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
-        <button>Замовити послугу</button>
-       </section> 
-    </div>
-<!--Преимущества-->
-    <section>
-        <ul>
-            <li>
-                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-                </p>
-            </li>
-            <li>
-                <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-                </p>
-            </li>
-            <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.
-                </p>
-            </li>
-            <li>
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-                </p>
-            </li>
-        </ul>
-    </section>
-<!--Примеры работ-->
-    <section>
-        <h2>Чим ми займаємося</h2>
-        <img src="./images/img-01.jpg" alt="клавиатура" width="370">
-        <img src="./images/img-02.jpg" alt="смартфон" width="370">
-        <img src="./images/img-03.jpg" alt="планшет" width="370">
-    </section>
-<!--Команда-->
-    <section>
-        <h2>Наша команда</h2>
-<ul>
-    <li>
-        <img src="./images/01-igor-01.jpg" alt="Product Designer" width="270">
-        <p>Ігор Дем'яненко</p>
-        <img src="./images/02-olga-02.jpg" alt="Frontend Developer" width="270">
-        <p>Ольга Рєпіна</p>
-        <img src="./images/03-mykola-03.jpg" alt="Marketing" width="270">
-        <p>Микола Тарасов</p>
-        <img src="./images/04-myhailo-04.jpg" alt="UI Designer" width="270">
-        <p>Михайло Єрмаков</p>
-    </li>
-</ul>
-    </section>
+
+    <main>
+        <div>
+            <section>
+                <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
+                <button>Замовити послугу</button>
+            </section>
+        </div>
+        <!--Преимущества-->
+        <section>
+            <ul>
+                <li>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                    </p>
+                </li>
+                <li>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                    </p>
+                </li>
+                <li>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.
+                    </p>
+                </li>
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <!--Примеры работ-->
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <img src="./images/img-01.jpg" alt="клавиатура" width="370">
+            <img src="./images/img-02.jpg" alt="смартфон" width="370">
+            <img src="./images/img-03.jpg" alt="планшет" width="370">
+        </section>
+        <!--Команда-->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/01-igor-01.jpg" alt="Product Designer" width="270">
+                    <p>Ігор Дем'яненко</p>
+                    <img src="./images/02-olga-02.jpg" alt="Frontend Developer" width="270">
+                    <p>Ольга Рєпіна</p>
+                    <img src="./images/03-mykola-03.jpg" alt="Marketing" width="270">
+                    <p>Микола Тарасов</p>
+                    <img src="./images/04-myhailo-04.jpg" alt="UI Designer" width="270">
+                    <p>Михайло Єрмаков</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    
+<!--Футер-->
+    <footer>
+<p>Futer</p>
+    </footer>
 </body>
 </html>
