перегруппировал имена команды

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -69,16 +69,20 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li>
-                    <img src="./images/01-igor-01.jpg" alt="Product Designer" width="270">
-                    <p>Ігор Дем'яненко</p>
-                    <img src="./images/02-olga-02.jpg" alt="Frontend Developer" width="270">
-                    <p>Ольга Рєпіна</p>
-                    <img src="./images/03-mykola-03.jpg" alt="Marketing" width="270">
-                    <p>Микола Тарасов</p>
-                    <img src="./images/04-myhailo-04.jpg" alt="UI Designer" width="270">
-                    <p>Михайло Єрмаков</p>
-                </li>
+                <img src="./images/01-igor-01.jpg" alt="Ігор Дем'яненко" width="270">
+                <img src="./images/02-olga-02.jpg" alt="Ольга Рєпіна" width="270">
+                <img src="./images/03-mykola-03.jpg" alt="Микола Тарасов" width="270">
+                <img src="./images/04-myhailo-04.jpg" alt="Михайло Єрмаков" width="270">
+            </ul>
+            <ul>
+                <p>Ігор Дем'яненко</p>
+                <p>Product Designer</p>
+                <p>Ольга Рєпіна</p>
+                <p>Frontend Developer</p>
+                <p>Микола Тарасов</p>
+                <p>Marketing</p>
+                <p>Михайло Єрмаков</p>
+                <p>UI Designer</p>
             </ul>
         </section>
     </main>
