Исправил подписи к фотографиям команды

--- a/index.html
+++ b/index.html
@@ -68,22 +68,16 @@
         <!--Команда-->
         <section>
             <h2>Наша команда</h2>
-            <ul>
-                <img src="./images/01-igor-01.jpg" alt="Ігор Дем'яненко" width="270">
-                <img src="./images/02-olga-02.jpg" alt="Ольга Рєпіна" width="270">
-                <img src="./images/03-mykola-03.jpg" alt="Микола Тарасов" width="270">
-                <img src="./images/04-myhailo-04.jpg" alt="Михайло Єрмаков" width="270">
-            </ul>
-            <ul>
-                <p>Ігор Дем'яненко</p>
-                <p>Product Designer</p>
-                <p>Ольга Рєпіна</p>
-                <p>Frontend Developer</p>
-                <p>Микола Тарасов</p>
-                <p>Marketing</p>
-                <p>Михайло Єрмаков</p>
-                <p>UI Designer</p>
-            </ul>
+                <figure>
+                    <img src="./images/01-igor-01.jpg" alt="Ігор Дем'яненко" width="270">
+                    <figcaption>Ігор Дем'яненко Product Designer</figcaption>
+                    <img src="./images/02-olga-02.jpg" alt="Ольга Рєпіна" width="270">
+                    <figcaption>Ольга Рєпіна Frontend Developer</figcaption>
+                    <img src="./images/03-mykola-03.jpg" alt="Микола Тарасов" width="270">
+                    <figcaption>Микола Тарасов Marketing</figcaption>
+                    <img src="./images/04-myhailo-04.jpg" alt="Михайло Єрмаков" width="270">
+                    <figcaption>Михайло Єрмаков UI Designer</figcaption>
+                </figure>
         </section>
     </main>
     
