--- a/index.html
+++ b/index.html
@@ -83,7 +83,14 @@
     
 <!--Футер-->
     <footer>
-<p>Futer</p>
+        <a href="./">
+            <img src="./images/Logo-Web.svg" alt="логотип компании">
+        </a>
+         <address>
+            м. Київ, пр-т Лесі Українки, 26<br />
+            info@devstudio.com<br />
+            +38 096 111 11 11
+         </address>
     </footer>
 </body>
 </html>
