--- a/index.html
+++ b/index.html
@@ -71,10 +71,16 @@
                 <figure>
                     <img src="./images/01-igor-01.jpg" alt="Ігор Дем'яненко" width="270">
                     <figcaption>Ігор Дем'яненко Product Designer</figcaption>
+                </figure>
+                <figure>
                     <img src="./images/02-olga-02.jpg" alt="Ольга Рєпіна" width="270">
                     <figcaption>Ольга Рєпіна Frontend Developer</figcaption>
+                </figure>
+                <figure>
                     <img src="./images/03-mykola-03.jpg" alt="Микола Тарасов" width="270">
                     <figcaption>Микола Тарасов Marketing</figcaption>
+                </figure>
+                <figure>
                     <img src="./images/04-myhailo-04.jpg" alt="Михайло Єрмаков" width="270">
                     <figcaption>Михайло Єрмаков UI Designer</figcaption>
                 </figure>
@@ -87,8 +93,8 @@
             <img src="./images/Logo-Web.svg" alt="логотип компании">
         </a>
          <address>
-            м. Київ, пр-т Лесі Українки, 26<br />
-            info@devstudio.com<br />
+            м. Київ, пр-т Лесі Українки, 26
+            info@devstudio.com
             +38 096 111 11 11
          </address>
     </footer>
